Adding manifest.json

--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 5684,
+    "id" : "https://ginkgo97.github.io/William-Turner/images/the-fightingtemeraire-1839/canvas/",
+    "label" : {
+      "none" : [ "the-fightingtemeraire-1839" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://ginkgo97.github.io/William-Turner/images/the-fightingtemeraire-1839/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://ginkgo97.github.io/William-Turner/images/the-fightingtemeraire-1839/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 178,
+              "height" : 133
+            }, {
+              "width" : 356,
+              "height" : 265
+            }, {
+              "width" : 711,
+              "height" : 529
+            }, {
+              "width" : 1421,
+              "height" : 1057
+            }, {
+              "width" : 2842,
+              "height" : 2113
+            }, {
+              "width" : 5684,
+              "height" : 4226
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 5684,
+            "@id" : "https://ginkgo97.github.io/William-Turner/images/the-fightingtemeraire-1839",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 4226
+          } ],
+          "format" : "image/jpeg",
+          "width" : 5684,
+          "id" : "https://ginkgo97.github.io/William-Turner/images/the-fightingtemeraire-1839/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 4226
+        },
+        "target" : "https://ginkgo97.github.io/William-Turner/images/the-fightingtemeraire-1839/canvas/"
+      } ]
+    } ],
+    "height" : 4226
+  }, {
     "width" : 800,
     "id" : "https://ginkgo97.github.io/William-Turner/images/the-fighting-temeraire/canvas/",
     "label" : {
